--- a/src/app/appmodules/auth/registor/registor.html
+++ b/src/app/appmodules/auth/registor/registor.html
@@ -5,20 +5,28 @@
             <div class="container-fluid border shadow bg-light p-5">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <h2>Login page</h2>
+                        <h2>Registor page</h2>
                     </div>
                     <div class="col-md-12">
                         <div class="mb-3">
                             <label class="form-label">Email address</label>
                             <input type="email" class="form-control">
                         </div>
+                        <div class="mb-3">
+                            <label class="form-label">fullname</label>
+                            <input type="text" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Phone no</label>
+                            <input type="text" class="form-control">
+                        </div>
                          <div class="mb-3">
                             <label class="form-label">Password</label>
                             <input type="password" class="form-control">
                         </div>
                          <div class="mb-3">
-                            
-                            <input type="button" class="btn btn-ms btn-success" value="login">
+                            <input type="button" class="btn btn-ms btn-success" value="registor now">
+                            <a routerLink="/">login</a>
                         </div>
                     </div>
                 </div>
