--- a/src/app/appmodules/layouts/fullpage/fullpage.html
+++ b/src/app/appmodules/layouts/fullpage/fullpage.html
@@ -1,2 +1,16 @@
+<app-headerpage></app-headerpage>
+<div class="container-fluid mt-5">
+    <div class="row">
+        <div class="col-md-2">
+            <app-sidebarpage></app-sidebarpage>
+        </div>
+        <div class="col-md-10 pt-3">
+            <div class="cus-h bg-light">
+            <router-outlet></router-outlet>
+            </div>
+            <app-footerpage></app-footerpage>
+        </div>
+    </div>
+</div>
 
-<router-outlet></router-outlet>
+
