--- a/src/app/appmodules/dashboard/mainpage/mainpage.html
+++ b/src/app/appmodules/dashboard/mainpage/mainpage.html
@@ -6,9 +6,10 @@
 <h1>{{amount | parampipe:8}}</h1>
 
 
-<input [{ngModel}]="searchdata" title="search"/>
+<input [(ngModel)]="searchdata" title="search"/>
 
 
+<h1>{{searchdata}}</h1>
 
 <ul *ngFor="let a of (counse | impurepipe:searchdata)">
     <li> {{a.name}}</li>
