--- a/src/app/appmodules/sharescomponents/sidebarpage/sidebarpage.html
+++ b/src/app/appmodules/sharescomponents/sidebarpage/sidebarpage.html
@@ -9,11 +9,13 @@
             </button>
             <div class="collapse" id="home-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Overview</a>
+                    <li><a routerLink="/dashboard" class="link-body-emphasis d-inline-flex text-decoration-none rounded">dashboard</a>
                     </li>
-                    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Updates</a>
+                    <li><a routerLink="/dashboard/main" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Main</a>
                     </li>
-                    <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Reports</a>
+                    <li><a routerLink="/dashboard/form" class="link-body-emphasis d-inline-flex text-decoration-none rounded">reactive form</a>
+                    </li>
+                    <li><a routerLink="/dashboard/congrolflow" class="link-body-emphasis d-inline-flex text-decoration-none rounded">looping</a>
                     </li>
                 </ul>
             </div>
