--- a/src/app/appmodules/auth/loginpage/loginpage.html
+++ b/src/app/appmodules/auth/loginpage/loginpage.html
@@ -19,6 +19,7 @@
                          <div class="mb-3">
                             
                             <input type="button" class="btn btn-ms btn-success" value="login">
+                            <a routerLink="/dashboard">go to dashboard</a>
                         </div>
                     </div>
                 </div>
